Fix Border visual
border is x% length. Can't align using content align, so you use margin-left: x% (X being (100 - border length) / 2

--- a/main.css
+++ b/main.css
@@ -37,5 +37,5 @@
     border-left: none;
     border-right: none;
     max-width:14%;
-    margin-left:27.5%;
+    margin-left:43%;
 }
